--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-ts-eslint-prettier-template",
   "version": "0.1.0",
+  "homepage": "https://k1ngsman-hub.github.io/KV.WebFront/",
   "private": true,
   "dependencies": {
     "@types/node": "^16.18.11",
@@ -14,6 +15,8 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
